--- a/style/style.css
+++ b/style/style.css
@@ -179,3 +179,62 @@ nav{
         font-size: 14px;
     }
 }
+
+/* hero section styles */
+.hero{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 50px 0;
+}
+
+.heroLeft>h1{
+    color: #3A3A3A;
+    font-weight: bold;
+    font-size: 52px;
+    line-height: 70px;
+}
+
+
+.heroLeft>p{
+    color: #3A3A3A;
+    font-weight: 600;
+    font-size: 16px;
+    margin: 16px 0;
+}
+
+.heroLeft>button{
+    background: #E02C6D;
+    color: white;
+    border-radius: 41px;
+    padding: 10px 24px;
+    font-weight: bold;
+    font-size: 16px;
+    border: none;
+}
+
+.heroRight{
+    background-image: url('../images/Circle\ design.svg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+}
+
+.heroRight>img{
+    width: 90%;
+}
+
+@media (max-width: 768px) {
+    .hero{
+        flex-direction: column-reverse;
+        gap: 20px;
+    }
+    .heroLeft{
+        text-align: center;
+        margin-top: 30px;
+    }
+    .heroLeft>h1{
+        font-size: 32px;
+        line-height: 40px;
+    }
+}
