--- a/style/style.css
+++ b/style/style.css
@@ -262,3 +262,75 @@ nav{
         width: auto;
     }
 }
+
+/* connection section styles */
+.cardSections{
+    margin: 80px 0;
+}
+.cardSections>h3{
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 70px;
+    color: #3A3A3A;
+    text-align: center;
+    margin-bottom: 30px;
+}
+.collections{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    flex-wrap: wrap;
+
+}
+
+
+.card{
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    background: white;
+    padding: 16px;
+    width: 329px;
+    border-radius: 5px;
+}
+
+.card>img{
+    width: 100%;
+}
+
+.card>h4{
+    color: #18191F;
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 40px;
+}
+
+.card>span{
+    color: #000000;
+    font-size: 24px;
+    line-height: 150%;
+    font-family: "Inter", serif;
+}
+
+.card>div>i{
+    color: orange;
+    font-size: 14px;
+}
+
+.card>div>span{
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 22px;
+    letter-spacing: 0.1px;
+    color: #5E6366;
+    margin-left: 10px;
+}
+
+.card>p{
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 143%;
+    letter-spacing: 1.8%;
+    color: #787885;
+    margin-top: 5px;
+    font-family: "Inter", serif;
+}
