--- a/style/style.css
+++ b/style/style.css
@@ -103,6 +103,7 @@ nav{
     color: #e02c6d ;
 }
 
+
 .menu{
     display: none;
     cursor: pointer;
@@ -211,6 +212,12 @@ nav{
     font-weight: bold;
     font-size: 16px;
     border: none;
+    cursor: pointer;
+    transition: all .5s;
+}
+
+.heroLeft>button:hover{
+    transform: scale(90%);
 }
 
 .heroRight{
@@ -222,6 +229,19 @@ nav{
 
 .heroRight>img{
     width: 90%;
+    animation: heroAnimation 20s linear infinite;
+}
+
+
+
+@keyframes heroAnimation {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+
+    }
 }
 
 @media (max-width: 768px) {
@@ -252,6 +272,14 @@ nav{
     gap: 20px;
 }
 
+.brands>img{
+    transition: all .5s;
+    cursor: pointer;
+}
+.brands>img:hover{
+    transform: scale(130%);
+}
+
 @media (max-width: 768px) {
     .brands{
         justify-content: center;
@@ -274,6 +302,7 @@ nav{
     color: #3A3A3A;
     text-align: center;
     margin-bottom: 30px;
+    cursor: pointer;
 }
 .collections{
     display: flex;
@@ -294,6 +323,10 @@ nav{
     cursor: pointer;
 }
 
+.cardSections button:hover{
+    color: blue;
+}
+
 .alignBtn{
     display: flex;
     align-items: end;
@@ -306,10 +339,21 @@ nav{
     padding: 16px;
     width: 329px;
     border-radius: 5px;
+    transition: all .5s;
+}
+
+.card:hover{
+    transform: scale(95%);
 }
 
 .card>img{
     width: 100%;
+    transition: all .5s;
+    cursor: pointer;
+}
+
+.card>img:hover{
+    transform: translateY(-10px) scale(110%);
 }
 
 .card>h4{
@@ -317,6 +361,12 @@ nav{
     font-size: 28px;
     font-weight: 500;
     line-height: 40px;
+    cursor: pointer;
+    transition: all .5s;
+}
+
+.card>h4:hover{
+    color: blue;
 }
 
 .card>span{
@@ -382,10 +432,21 @@ nav{
     border: none;
     margin-top: 20px;
     cursor: pointer;
+    transition: all .5s;
 }
+
+.featuredRight>button:hover{
+    transform: translateY(-5px);
+}
+
 
 .featured img{
     width: 100%;
+    cursor: pointer;
+    transition: all .5s;
+}
+.featured img:hover{
+    transform: scale(110%);
 }
 
 @media (max-width: 992px) {
@@ -415,6 +476,7 @@ footer{
 .footer>h3{
     font-weight: bold;
     font-size: 24px;
+    margin-bottom: 10px;
 }
 .footer span, p{
     font-size: 14px;
@@ -423,7 +485,7 @@ footer{
     color: #D9DBE1;
 }
 .footerIcons{
-    margin-top: 10px;
+    margin-top: 30px;
     display: flex;
     gap: 20px;
     justify-content: center;
@@ -437,4 +499,5 @@ footer{
 }
 .footerIcons>i:hover{
     background: #E02C6D;
+    transform: rotate(360deg) scale(120%);
 }
